@@ -1,3 +1,11 @@
+2002-04-14  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* configure: Regen.
+	* tcljava.m4 (AC_JAVA_JNI_LIBS): Update the JDK
+	detection macro to support Sun JDK 1.3 and 1.4
+	under Linux. Emit an error if no known jvm
+	configuration can be found.
+
 2002-04-13  Shawn Boyce  <shawn@qcominc.com>
 
 	* src/jacl/tcl/lang/Expression.java (ExprLex):
